fix(badge): changed styles to align correctly (#1566)

--- a/src/less/badge/base/badge.less
+++ b/src/less/badge/base/badge.less
@@ -1,16 +1,15 @@
 @import "../../mixins/utility/utility-mixins.less";
 
 .badge {
+    align-items: center;
     .background-color-token(badge-background-color, color-status-attention);
     border-radius: 16px;
-    box-sizing: border-box;
     .color-token(badge-foreground-color, color-background-default);
-    display: inline-block;
+    display: inline-flex;
     font-size: 10px;
     height: 16px;
-    line-height: 16px;
-    min-width: 16px;
-    padding: 1px 4px 1px 5px;
-    text-align: center;
+    justify-content: center;
+    min-width: 8px;
+    padding: 2px 6px;
     white-space: nowrap;
 }
